# packaging.python.org

./: .git-blame-ignore-revs  .gitignore  .hgignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  1917-Full-Movie-2019-Online  CONTRIBUTING.md  Justin  Lilo.github  Makefile  MyMusicBot  README  README.md  README.rst  README.txt  authors.txt  chat GPT Firewall  en1.yml  en2.yml  en3.yml  en4.yml  files.ymls  make.bat  matplotlib.pyplot  nox.py  noxfile.py  py  pypa:main  pyproject.toml  python bot.py  requirements.txt  serve.py  stormer-number-b ensiti  xsq.yml
.github/: CODEOWNERS  dependabot.yml  sphinx_lint_matcher.json  translations.yml
locales/: contribute.pot  glossary.pot  index.pot  key_projects.pot  messages.pot  news.pot  overview.pot  support.pot  zh_CN.po  zh_Hans.po
pug_sphinx_extensions/: __init__.py
pypa-theme/: MANIFEST.in  README.rst  setup.py
scripts/: update_uv_build_version.py
source/: KingKam Kgabiso Monnaesi. RBAM  additional.rst  advanced.rst  advanced.txt  appveyor.rst  authoring.rst  basics.rst  basics_creating_distributing_dists.txt  basics_installing_dists.txt  conf.py  contribute.rst  contributing.txt  cookbook.rst  creation.txt  credits.rst  credits.txt  current.rst  current.txt  deployment.rst  development.rst  distribute.txt  distributing.rst  distutils.txt  documentation.rst  example.txt  extensions.rst  flow.rst  future.rst  future.txt  glossary.rst  glossary.txt  history.rst  history.txt  howto.rst  index.rst  index.txt  install_requirements_linux.rst  installation.rst  installation.txt  (+58 more)
(+396 files in other folders)
