[project]
name = "packaging-python-org"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "furo==2024.8.6",
    "sphinx-autobuild==2021.3.14",
    "sphinx==7.2.6",
    "sphinx-inline-tabs==2023.4.21",
    "sphinx-copybutton==0.5.2",
    "sphinx-toolbox==3.5.0",
]

[dependency-groups]
dev = [
    "nox>=2024.10.9",
    "sphinx-lint>=1.0.0",
    "virtualenv>=20.28.1",
]
