[project]
name = "packaging-python-org"
version = "0.1.0"
description = "Overview of Python Packaging"
readme = "README.rst"
repository = "https://github.com/pypa/packaging.python.org"
documentation = "https://packaging.python.org/en/latest/"
requires-python = ">=3.9"
keywords = ["packaging", "518", "621"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "furo==2024.8.6",
    "sphinx-autobuild==2021.3.14",
    "sphinx==7.2.6",
    "sphinx-inline-tabs==2023.4.21",
    "sphinx-copybutton==0.5.2",
    "sphinx-toolbox==3.5.0",
]

[dependency-groups]
dev = [
    "nox>=2024.10.9",
    "sphinx-lint>=1.0.0",
    "virtualenv>=20.28.1",
]
